care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Companion_Care_Rates_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Companion_Care_Rates_Weekend__c</fullName>
    <label>Companion Care Rates: Weekend</label>
    <length>30</length>
    <type>Text</type>
</CustomField>