care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Email__c</fullName>
    <label>Company Email Address</label>
    <type>Email</type>
</CustomField>