care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Completed_by_paralegal__c.field-meta.xml
<CustomField>
    <fullName>Completed_by_paralegal__c</fullName>
    <label>Is work completed by a paralegal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>