care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Complex_Half_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Complex_Half_Day_Rate__c</fullName>
    <description>added for SFORCE-1918  RT Adult Day Health 06/2018</description>
    <label>Complex Half-Day Rate</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>