care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Conduct_in_person_interview__c.field-meta.xml
<CustomField>
    <fullName>Conduct_in_person_interview__c</fullName>
    <label>Conduct in-person interview</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>