care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Conduct_phone_meetings__c.field-meta.xml
<CustomField>
    <fullName>Conduct_phone_meetings__c</fullName>
    <label>Willing to conduct phone meetings?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>