care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Conduct_safety_checks_describe__c.field-meta.xml
<CustomField>
    <fullName>Conduct_safety_checks_describe__c</fullName>
    <label>If Yes, describe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>