care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Confirm_contractor_s_are_insured__c.field-meta.xml
<CustomField>
    <fullName>Confirm_contractor_s_are_insured__c</fullName>
    <label>Confirm contractor&apos;s are insured?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>