care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Contacts_Updated__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Updated__c</fullName>
    <description>added for SFORCE-1884 RT Non Medical Home Care 06/2018</description>
    <label>Contacts Updated</label>
    <type>Date</type>
</CustomField>