care/force-app/main/default/objects/Senior_Care_Companies__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County where this particular company branch or franchise is located.</description>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>