care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Cover_Area__c.field-meta.xml
<CustomField>
    <fullName>Cover_Area__c</fullName>
    <inlineHelpText>Enter the regional cities, counties or zips this Provider services</inlineHelpText>
    <label>Cover Area (Cities, Counties, Zips)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>