care/force-app/main/default/objects/Senior_Care_Companies__c/fields/CPR_Certified_Other__c.field-meta.xml
<CustomField>
    <fullName>CPR_Certified_Other__c</fullName>
    <label>CPR Certified-Other</label>
    <type>TextArea</type>
</CustomField>