care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Credent_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Credent_Application_Date__c</fullName>
    <inlineHelpText>Date of Credentialing Application</inlineHelpText>
    <label>Date of Application</label>
    <type>Date</type>
</CustomField>