care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Credentialed__c.field-meta.xml
<CustomField>
    <fullName>Credentialed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credentialed?</label>
    <type>Checkbox</type>
</CustomField>