care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Credentialed_Companion_Care__c.field-meta.xml
<CustomField>
    <fullName>Credentialed_Companion_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credentialed - Companion Care?</label>
    <type>Checkbox</type>
</CustomField>