care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Credentialed_Geriatric_Care_Manager__c.field-meta.xml
<CustomField>
    <fullName>Credentialed_Geriatric_Care_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credentialed - Aging Life Care Manager?</label>
    <type>Checkbox</type>
</CustomField>