care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Credentialed_Personal_Care__c.field-meta.xml
<CustomField>
    <fullName>Credentialed_Personal_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when the Provider has successfully completed the full Care.com Credentialing process for Personal Care</inlineHelpText>
    <label>Credentialed - Personal Care?</label>
    <type>Checkbox</type>
</CustomField>