care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Credentialing_accreditations__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_accreditations__c</fullName>
    <label>Accreditations</label>
    <type>TextArea</type>
</CustomField>