care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Credentialing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select your name as the &quot;Agent&quot; when you are the primary &quot;Credentialing&quot; contact for this company.</inlineHelpText>
    <label>Credentialing Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Senior_Care_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>