care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Credentialing_comments__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_comments__c</fullName>
    <label>Comments - Credentialing</label>
    <type>TextArea</type>
</CustomField>