care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Crime__c.field-meta.xml
<CustomField>
    <fullName>Crime__c</fullName>
    <description>Requested in SFORCE-7634</description>
    <label>Crime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5K</fullName>
            </value>
            <value>
                <fullName>10K</fullName>
            </value>
            <value>
                <fullName>25K</fullName>
            </value>
            <value>
                <fullName>50K</fullName>
            </value>
            <value>
                <fullName>100K</fullName>
            </value>
            <value>
                <fullName>250K</fullName>
            </value>
            <value>
                <fullName>300K</fullName>
            </value>
            <value>
                <fullName>500K</fullName>
            </value>
            <value>
                <fullName>1M</fullName>
            </value>
            <value>
                <fullName>2M</fullName>
            </value>
            <value>
                <fullName>3M</fullName>
            </value>
            <value>
                <fullName>Caregivers Bonded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>