care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Criminal_background_checks_all_cgs__c.field-meta.xml
<CustomField>
    <fullName>Criminal_background_checks_all_cgs__c</fullName>
    <description>Edited for NMHC Canada, SFORCE-1587</description>
    <inlineHelpText>Criminal background checks on all caregivers? For NMHC Canada: Do you conduct criminal background checks on all direct care employees? Criminal background checks in Canada are carried out by National Vulnerable Sector Screening.</inlineHelpText>
    <label>Criminal background checks on all cg&apos;s?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>