care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Curr_availability_to_conduct_assessment__c.field-meta.xml
<CustomField>
    <fullName>Curr_availability_to_conduct_assessment__c</fullName>
    <inlineHelpText>Current availability to conduct assessment</inlineHelpText>
    <label>Curr. availability to conduct assessment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>