care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Current_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Current_Number_of_Participants__c</fullName>
    <label>Current Number of Participants</label>
    <length>100</length>
    <type>Text</type>
</CustomField>