care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Customer_complaint_policy__c.field-meta.xml
<CustomField>
    <fullName>Customer_complaint_policy__c</fullName>
    <label>Describe customer complaint policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>