care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Date_of_BBB_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_BBB_Accreditation__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date of BBB Accreditation</label>
    <type>Date</type>
</CustomField>