care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Date_of_Discount_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Discount_Inquiry__c</fullName>
    <description>SFORCE-2936
Dev - Add fields to Senior Care Companies object</description>
    <inlineHelpText>Enter the date you requested a discount</inlineHelpText>
    <label>Date of Discount Inquiry</label>
    <type>Date</type>
</CustomField>