care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Date_of_inquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_inquiry__c</fullName>
    <label>Date of inquiry</label>
    <type>Date</type>
</CustomField>