care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Date_Vetted__c.field-meta.xml
<CustomField>
    <fullName>Date_Vetted__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Vetted</label>
    <type>Date</type>
</CustomField>