care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Dedicated_staff_special_care_unit__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_staff_special_care_unit__c</fullName>
    <description>Sforce 1856</description>
    <inlineHelpText>Are certain staff designated to memory care or do they float between traditional and memory care?</inlineHelpText>
    <label>Dedicated staff for special care unit?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>