care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Deposit_to_hold_unit__c.field-meta.xml
<CustomField>
    <fullName>Deposit_to_hold_unit__c</fullName>
    <label>Deposit to hold unit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>