care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Desc_health_screening__c.field-meta.xml
<CustomField>
    <fullName>Desc_health_screening__c</fullName>
    <label>Please describe health screening</label>
    <length>255</length>
    <type>Text</type>
</CustomField>