care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_caregiver_ongoing_training__c.field-meta.xml
<CustomField>
    <fullName>Describe_caregiver_ongoing_training__c</fullName>
    <description>size expanded for SFORCE-1884 RT Non Medical Home Care 06/2018</description>
    <label>Describe caregiver ongoing training</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>