care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_caregiver_orientation__c.field-meta.xml
<CustomField>
    <fullName>Describe_caregiver_orientation__c</fullName>
    <label>Describe caregiver orientation</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>