care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_dementia_care_philosophy__c.field-meta.xml
<CustomField>
    <fullName>Describe_dementia_care_philosophy__c</fullName>
    <label>Describe dementia care/philosophy</label>
    <type>TextArea</type>
</CustomField>