care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_MC_format_programming__c.field-meta.xml
<CustomField>
    <fullName>Describe_MC_format_programming__c</fullName>
    <description>added for SFORCE-1918  RT Adult Day Health 06/2018</description>
    <label>Describe MC format/programming</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>