care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_night_staff_if_under_10_beds__c.field-meta.xml
<CustomField>
    <fullName>Describe_night_staff_if_under_10_beds__c</fullName>
    <description>Sforce 1854 ---  Senior Care - Remove/Add fields in Assisted Living SF record pages</description>
    <inlineHelpText>Describe night staffing if under 10 beds</inlineHelpText>
    <label>Describe night staff if under 10 beds</label>
    <type>TextArea</type>
</CustomField>