care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_ongoing_supervision_cgs__c.field-meta.xml
<CustomField>
    <fullName>Describe_ongoing_supervision_cgs__c</fullName>
    <label>Describe ongoing supervision of Cg&apos;s</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>