care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_overnight_staffing__c.field-meta.xml
<CustomField>
    <fullName>Describe_overnight_staffing__c</fullName>
    <label>xDescribe overnight staffing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>