care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_security_measures_community__c.field-meta.xml
<CustomField>
    <fullName>Describe_security_measures_community__c</fullName>
    <label>Describe security measures in community</label>
    <type>TextArea</type>
</CustomField>