care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_senior_care_related_training__c.field-meta.xml
<CustomField>
    <fullName>Describe_senior_care_related_training__c</fullName>
    <label>Describe senior care related training</label>
    <type>TextArea</type>
</CustomField>