care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_special_care_unit__c.field-meta.xml
<CustomField>
    <fullName>Describe_special_care_unit__c</fullName>
    <inlineHelpText>Describe the memory care neighbourhood</inlineHelpText>
    <label>Describe special care unit</label>
    <type>TextArea</type>
</CustomField>