care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Describe_your_cancellation_policy__c.field-meta.xml
<CustomField>
    <fullName>Describe_your_cancellation_policy__c</fullName>
    <description>Description of the cancellation policy</description>
    <label>Describe your cancellation policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>