care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Details_Deficiences_Last_3years__c.field-meta.xml
<CustomField>
    <fullName>Details_Deficiences_Last_3years__c</fullName>
    <defaultValue>&quot;Default Text&quot;</defaultValue>
    <label>Details of Deficiences Last 3 years</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>