care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Dietitian_on_staff_special_needs_diet__c.field-meta.xml
<CustomField>
    <fullName>Dietitian_on_staff_special_needs_diet__c</fullName>
    <inlineHelpText>Dietitian on staff/contracted for special needs diets?</inlineHelpText>
    <label>xDietitian on staff/special needs diets?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>