care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Direct_care_staff_resident_ratio__c.field-meta.xml
<CustomField>
    <fullName>Direct_care_staff_resident_ratio__c</fullName>
    <label>Direct care staff to resident ratio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>