care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Director_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Director_Administrator__c</fullName>
    <label>Director/Administrator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>