care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Director_Administrator_Email__c.field-meta.xml
<CustomField>
    <fullName>Director_Administrator_Email__c</fullName>
    <label>Director/Administrator&apos;s Email</label>
    <type>Email</type>
</CustomField>