care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Director_Administrator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Director_Administrator_Phone__c</fullName>
    <label>Director/Administrator&apos;s Phone</label>
    <type>Phone</type>
</CustomField>