care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Discount_for_assessment_fee__c.field-meta.xml
<CustomField>
    <fullName>Discount_for_assessment_fee__c</fullName>
    <label>Discount for assessment fee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>