care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Discount_hourly_rates__c.field-meta.xml
<CustomField>
    <fullName>Discount_hourly_rates__c</fullName>
    <label>Willing to discount hourly rates?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, I am willing to discount my rates.</fullName>
            </value>
            <value>
                <fullName>No, I am not willing to discount my rates.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>