care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Do_you_conduct_satisfaction_surveys__c.field-meta.xml
<CustomField>
    <fullName>Do_you_conduct_satisfaction_surveys__c</fullName>
    <label>Do you conduct satisfaction surveys?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>