care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Does_State_Require_Licensure__c.field-meta.xml
<CustomField>
    <fullName>Does_State_Require_Licensure__c</fullName>
    <description>SFORCE-2431
Dev - Add fields to Senior Care Company / Non-Medical Home Care record type</description>
    <label>Does State Require Licensure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>