care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Driving_Safety_Rec_Verified__c.field-meta.xml
<CustomField>
    <fullName>Driving_Safety_Rec_Verified__c</fullName>
    <label>Driving Safety Record Verified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>