care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Drug_screening_frequency__c.field-meta.xml
<CustomField>
    <fullName>Drug_screening_frequency__c</fullName>
    <label>Drug screening frequency?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>