care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Drug_screening_performed__c.field-meta.xml
<CustomField>
    <fullName>Drug_screening_performed__c</fullName>
    <label>Drug screening performed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>