care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ELA_A1_hourly_rate__c.field-meta.xml
<CustomField>
    <fullName>ELA_A1_hourly_rate__c</fullName>
    <label>Att.1 hourly rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>