care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ELA_A2_discount__c.field-meta.xml
<CustomField>
    <fullName>ELA_A2_discount__c</fullName>
    <label>Att.2 If yes, what is the discount?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>