care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ELA_Flat_fee__c.field-meta.xml
<CustomField>
    <fullName>ELA_Flat_fee__c</fullName>
    <label>Flat fee (give examples)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>