care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ELA_Services_provided__c.field-meta.xml
<CustomField>
    <fullName>ELA_Services_provided__c</fullName>
    <label>Services provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Long Term Care Planning</fullName>
            </value>
            <value>
                <fullName>Wills and trusts</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Guardianship/Conservatorship</fullName>
            </value>
            <value>
                <fullName>Asset Preservation</fullName>
            </value>
            <value>
                <fullName>Medicaid Planning</fullName>
            </value>
            <value>
                <fullName>Medicaid Application</fullName>
            </value>
            <value>
                <fullName>Planning for Veterans</fullName>
            </value>
            <value>
                <fullName>Special Needs Planning</fullName>
            </value>
            <value>
                <fullName>Probate Administration</fullName>
            </value>
            <value>
                <fullName>Life insurance / longterm care insurance</fullName>
            </value>
            <value>
                <fullName>Purchase/sale of real estate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>