care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ELA_Services_Required__c.field-meta.xml
<CustomField>
    <fullName>ELA_Services_Required__c</fullName>
    <label>ELA Services Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wills and trusts</fullName>
            </value>
            <value>
                <fullName>Power of Attorney/Health Care Proxy/HIPAA forms</fullName>
            </value>
            <value>
                <fullName>Asset preservation</fullName>
            </value>
            <value>
                <fullName>Medicaid planning</fullName>
            </value>
            <value>
                <fullName>Medicaid application</fullName>
            </value>
            <value>
                <fullName>Veterans benefits/planning</fullName>
            </value>
            <value>
                <fullName>Long-term care planning</fullName>
            </value>
            <value>
                <fullName>Real estate purchase/sale/transfer</fullName>
            </value>
            <value>
                <fullName>Probate administration</fullName>
            </value>
            <value>
                <fullName>Guardianship/Conservatorship</fullName>
            </value>
            <value>
                <fullName>Life insurance/long-term care insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>