care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Emergency_Services_Rate_Hr__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Services_Rate_Hr__c</fullName>
    <label>Emergency Services Rate/Hr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>