care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <description>Requested in SFORCE-7634</description>
    <label>Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>