care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Fee_for_Initial_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Fee_for_Initial_Assessment__c</fullName>
    <inlineHelpText>Initial Consultation/Assessment Rate</inlineHelpText>
    <label>Fee for Initial Assessment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>