care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Financial_benefit_for_referrals__c.field-meta.xml
<CustomField>
    <fullName>Financial_benefit_for_referrals__c</fullName>
    <label>Financial benefit for referrals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>