care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Fines_Payment_Denials_Details__c.field-meta.xml
<CustomField>
    <fullName>Fines_Payment_Denials_Details__c</fullName>
    <label>If Yes, details</label>
    <type>TextArea</type>
</CustomField>