care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Fines_Payment_Denials_last_3years__c.field-meta.xml
<CustomField>
    <fullName>Fines_Payment_Denials_last_3years__c</fullName>
    <label>Fines/Payment Denials in the last 3 yrs?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>