care/force-app/main/default/objects/Senior_Care_Companies__c/fields/First_payment__c.field-meta.xml
<CustomField>
    <fullName>First_payment__c</fullName>
    <label>xFirst payment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>