care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Franchise_Name__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Name__c</fullName>
    <label>Franchise Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>