care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Frequency_of_customer_invoicing__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_customer_invoicing__c</fullName>
    <label>Frequency of customer invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Twice-monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>