care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Frequency_of_doctors_visits__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_doctors_visits__c</fullName>
    <label>xFrequency of doctors visits to home</label>
    <length>100</length>
    <type>Text</type>
</CustomField>