care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Frequency_service_plan_is_reviewed__c.field-meta.xml
<CustomField>
    <fullName>Frequency_service_plan_is_reviewed__c</fullName>
    <label>Frequency service plan is reviewed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>