care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Frequency_updates_bkgrchecks__c.field-meta.xml
<CustomField>
    <fullName>Frequency_updates_bkgrchecks__c</fullName>
    <label>If Yes, frequency of updates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>