care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Full_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Full_Day_Rate__c</fullName>
    <label>Basic Full Day Rate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>