care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Full_time_activities_director__c.field-meta.xml
<CustomField>
    <fullName>Full_time_activities_director__c</fullName>
    <label>xFull time activities director?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>