care/force-app/main/default/objects/Senior_Care_Companies__c/fields/GCM_1__c.field-meta.xml
<CustomField>
    <fullName>GCM_1__c</fullName>
    <label>ALCM 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>