care/force-app/main/default/objects/Senior_Care_Companies__c/fields/GCM_1_Certifications__c.field-meta.xml
<CustomField>
    <fullName>GCM_1_Certifications__c</fullName>
    <label>Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Care Manager Certified (CMC)</fullName>
            </value>
            <value>
                <fullName>Certified Case Manager (CCM)</fullName>
            </value>
            <value>
                <fullName>Cert.Advan.Social Work Case Mgr(C-ASWCM)</fullName>
                <default>true</default>
                <label>Cert.Advan.Social Work Case Mgr(C-ASWCM)</label>
            </value>
            <value>
                <fullName>Cert. Social Work Case Manager (C-SWCM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>