care/force-app/main/default/objects/Senior_Care_Companies__c/fields/GCM_1_Comments__c.field-meta.xml
<CustomField>
    <fullName>GCM_1_Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>