care/force-app/main/default/objects/Senior_Care_Companies__c/fields/GCM_1_Discipline__c.field-meta.xml
<CustomField>
    <fullName>GCM_1_Discipline__c</fullName>
    <label>Discipline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RN</fullName>
                <default>true</default>
                <label>RN</label>
            </value>
            <value>
                <fullName>MSW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>